api/deploy/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: laravel-app
spec:
  to:
    kind: Service
    name: laravel-app
  port:
    targetPort: 9000
  tls:
    termination: edge
